--- a/.eslintrc
+++ b/.eslintrc
@@ -13,5 +13,30 @@
     "no-mixed-requires": [0],
     "no-underscore-dangle": [0],
     "max-len": [1, 140],
+    "no-multiple-empty-lines": [0],
+   "no-trailing-spaces": [0],
+   "arrow-body-style": [0],
   }
 }
+
+# `{
+#  "parser": "babel-eslint",
+#  "extends": "airbnb/base",
+#  "env": {
+#    "browser": true,
+#    "mocha": true,
+#    "node": true
+#  },
+#  "rules": {
+#    "quotes": [2, "single"],
+#    "eol-last": [0],
+#    "no-mixed-requires": [0],
+#    "no-underscore-dangle": [0],
+#    "no-unused-vars": [0],
+#    "no-multiple-empty-lines": [0],
+#    "arrow-body-style": [0],
+#    "no-trailing-spaces": [0],
+#    "no-console": [1],
+#    "import/no-extraneous-dependencies": ["error", {"devDependencies": false, "optionalDependencies": false, "peerDependencies": false}]
+#  }
+# }
